@@ -20,15 +20,13 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.opentripplanner.api.common.LocationStringParser;
+import org.opentripplanner.gtfs.graphbuilder.GtfsBundle;
 import org.opentripplanner.ext.fares.impl.DefaultFareService;
 import org.opentripplanner.ext.fares.impl.DefaultFareServiceFactory;
 import org.opentripplanner.graph_builder.issue.api.DataImportIssueStore;
-import org.opentripplanner.graph_builder.module.GtfsFeedId;
-import org.opentripplanner.gtfs.graphbuilder.GtfsBundle;
 import org.opentripplanner.gtfs.graphbuilder.GtfsModule;
 import org.opentripplanner.model.TimetableSnapshot;
 import org.opentripplanner.model.calendar.ServiceDateInterval;
@@ -62,6 +60,8 @@ import org.opentripplanner.updater.trip.gtfs.GtfsRealTimeTripUpdateAdapter;
 /** Common base class for many test classes which need to load a GTFS feed in preparation for tests. */
 public abstract class GtfsTest {
 
+  protected static final String FEED_ID = "FEED";
+
   public Graph graph;
   public TimetableRepository timetableRepository;
 
@@ -69,7 +69,6 @@ public abstract class GtfsTest {
   GtfsRealTimeTripUpdateAdapter tripUpdateAdapter;
   TransitAlertServiceImpl alertPatchServiceImpl;
   public OtpServerRequestContext serverContext;
-  public GtfsFeedId feedId;
 
   public abstract String getFeedName();
 
@@ -99,17 +98,15 @@ public abstract class GtfsTest {
     routingRequest.setDateTime(Instant.ofEpochSecond(Math.abs(dateTime)));
     if (fromVertex != null && !fromVertex.isEmpty()) {
       routingRequest.setFrom(
-        LocationStringParser.getGenericLocation(null, feedId.getId() + ":" + fromVertex)
+        LocationStringParser.getGenericLocation(null, FEED_ID + ":" + fromVertex)
       );
     }
     if (toVertex != null && !toVertex.isEmpty()) {
-      routingRequest.setTo(
-        LocationStringParser.getGenericLocation(null, feedId.getId() + ":" + toVertex)
-      );
+      routingRequest.setTo(LocationStringParser.getGenericLocation(null, FEED_ID + ":" + toVertex));
     }
     if (onTripId != null && !onTripId.isEmpty()) {
       // TODO VIA - set different on-board request
-      //routingRequest.startingTransitTripId = (new FeedScopedId(feedId.getId(), onTripId));
+      //routingRequest.startingTransitTripId = (new FeedScopedId(FEED_ID, onTripId));
     }
     routingRequest.setWheelchair(wheelchairAccessible);
 
@@ -132,7 +129,7 @@ public abstract class GtfsTest {
     }
 
     if (excludedRoute != null && !excludedRoute.isEmpty()) {
-      List<FeedScopedId> routeIds = List.of(new FeedScopedId(feedId.getId(), excludedRoute));
+      List<FeedScopedId> routeIds = List.of(new FeedScopedId(FEED_ID, excludedRoute));
       filterRequestBuilder.addNot(SelectRequest.of().withRoutes(routeIds).build());
     }
 
@@ -178,9 +175,9 @@ public abstract class GtfsTest {
     assertEquals(startTime, leg.getStartTime().toInstant().toEpochMilli());
     assertEquals(endTime, leg.getEndTime().toInstant().toEpochMilli());
     assertEquals(toStopId, leg.getTo().stop.getId().getId());
-    assertEquals(feedId.getId(), leg.getTo().stop.getId().getFeedId());
+    assertEquals(FEED_ID, leg.getTo().stop.getId().getFeedId());
     if (fromStopId != null) {
-      assertEquals(feedId.getId(), leg.getFrom().stop.getId().getFeedId());
+      assertEquals(FEED_ID, leg.getFrom().stop.getId().getFeedId());
       assertEquals(fromStopId, leg.getFrom().stop.getId().getId());
     } else {
       assertNull(leg.getFrom().stop.getId());
@@ -198,10 +195,9 @@ public abstract class GtfsTest {
   protected void setUp() throws Exception {
     File gtfs = new File("src/test/resources/" + getFeedName());
     File gtfsRealTime = new File("src/test/resources/" + getFeedName() + ".pb");
-    GtfsBundle gtfsBundle = new GtfsBundle(gtfs);
-    feedId = new GtfsFeedId.Builder().id("FEED").build();
-    gtfsBundle.setFeedId(feedId);
-    List<GtfsBundle> gtfsBundleList = Collections.singletonList(gtfsBundle);
+
+    GtfsBundle gtfsBundle = GtfsBundle.forTest(gtfs, FEED_ID);
+    List<GtfsBundle> gtfsBundleList = List.of(gtfsBundle);
 
     alertsUpdateHandler = new AlertsUpdateHandler(false);
     var deduplicator = new Deduplicator();
@@ -215,7 +211,7 @@ public abstract class GtfsTest {
     );
 
     var fareServiceFactory = new DefaultFareServiceFactory();
-    GtfsModule gtfsGraphBuilderImpl = new GtfsModule(
+    GtfsModule gtfsGraphBuilderImpl = GtfsModule.forTest(
       gtfsBundleList,
       timetableRepository,
       graph,
@@ -242,7 +238,7 @@ public abstract class GtfsTest {
     );
     alertPatchServiceImpl = new TransitAlertServiceImpl(timetableRepository);
     alertsUpdateHandler.setTransitAlertService(alertPatchServiceImpl);
-    alertsUpdateHandler.setFeedId(feedId.getId());
+    alertsUpdateHandler.setFeedId(FEED_ID);
 
     try {
       InputStream inputStream = new FileInputStream(gtfsRealTime);
@@ -257,7 +253,7 @@ public abstract class GtfsTest {
         REQUIRED_NO_DATA,
         UpdateIncrementality.DIFFERENTIAL,
         updates,
-        feedId.getId()
+        FEED_ID
       );
       alertsUpdateHandler.update(feedMessage, null);
     } catch (FileNotFoundException exception) {}
